[package]
name = "torad-user-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
juniper = "0.15.11"
log = "0.4.17"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.157"
serde_json = "1.0.94"
strum = "0.24.1"
strum_macros = "0.24.3"
url = "2.3.1"
